# image2image-io

./: .github_changelog_generator  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
misc/: writer.py
src/image2image_io/: __init__.py  _reader.py  _writer.py  _zarr.py  combine.py  config.py  constants.py  crop.py  enums.py  exceptions.py  mask.py  merge.py  wrapper.py
src/image2image_io/cli/: __init__.py  _common.py  convert.py  crop.py  czi2tiff.py  mask.py  merge.py  thumbnail.py  transform.py
src/image2image_io/models/: __init__.py  base.py  merge.py  preprocess.py  transform.py
src/image2image_io/readers/: __init__.py  _base_reader.py  _czi.py  array_reader.py  coordinate_reader.py  czi_reader.py  geojson_reader.py  geojson_utils.py  h5ad_reader.py  merge.py  ome_zarr_reader.py  points_reader.py  shapes_reader.py  tiff_reader.py  tiff_utils.py  utilities.py
src/image2image_io/utils/: _appdirs.py  itk.py  lazy.py  mask.py  transformer.py  utilities.py  warp.py
src/image2image_io/writers/: __init__.py  merge_czi.py  merge_czi_alt.py  merge_tiff_writer.py  ome_zarr_writer.py  tiff_writer.py
src/image2image_reader/: __init__.py  _base_reader.py  _czi.py  _reader.py  _writer.py  array_reader.py  config.py  coordinate_reader.py  czi_reader.py  enums.py  geojson_reader.py  geojson_utils.py  tiff_reader.py  utilities.py  wrapper.py
src/image2image_reader/models/: transform.py
src/image2image_reader/readers/: __init__.py  _base_reader.py  _czi.py  array_reader.py  coordinate_reader.py  czi_reader.py  geojson_reader.py  geojson_utils.py  tiff_reader.py  tiff_utils.py  utilities.py
src/image2image_reader/utils/: lazy.py  mask.py  utilities.py
src/image2image_reader/writers/: tiff_writer.py
tests/: test_cli.py  test_combine.py  test_geojson_utils.py  test_h5ad_reader.py  test_ome_zarr.py  test_points_reader.py  test_reader.py  test_shapes_reader.py  test_utilities.py  test_warp.py  test_writer.py  test_zarr.py
tests/_test_data/: 2d-image-small.czi  Example_Continuous.icache  mask_pr2.npy  mask_pr2.ome.tiff  multi_polygon.geojson  test.h5ad
tests/_test_data/transform/: test-1.ome.tiff  test_transform1.i2r.json  test_transform2.i2r.json  test_transform3.i2r.json  test_transform4.i2r.json  test_transform5.i2r.json
